--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
 }
 
-body {
+body { /* body styling */
     font-family: 'Poppins', sans-serif;
     font-size: 16px;
     line-height: 1.5;
@@ -13,13 +13,14 @@ body {
 
 }
 
-.fbc {
+.fbc { /* styles the flex box containers */
    
     max-width: 1100px;
     margin: 0 auto;
     padding: 0 30px;
 }
 
+/*
 .item {
 display: flex;
 justify-content: center;
@@ -27,55 +28,56 @@ align-items: center;
 
 background: #3e000c;
 height: 100px;
-flex-basis: 100px; /* width */
+flex-basis: 100px; this is the width, but in flex lingo
 margin: 10px;
-color: #fff
+color: #fff;
 }
+*/
 
-.img {
+.img { /*global image styling*/
 max-width: 100%
 }
 
-.h1, .h2 {
+.h1, .h2 { /*global h1 and h2 styling*/
     margin-bottom: 16px ;
 }
 
 
 
-.navbar {
+.navbar { /*styles the navbar*/
     background: #520010;
     color: white;
     height: 80px;
 }
 
-.navbar .logo {
+.navbar .logo { /*styles the logo within the navbar*/
     font-weight: bold;
     font-size: xx-large;
 }
 
-.navbar .fbc {
+.navbar .fbc { /*styles the flex box container within the nav bar*/
     display: flex;
     justify-content: space-between;
     align-items: center;
     height: 100%;
 }
 
-.navbar a {
+.navbar a { /*styles the links within the navbar*/
     text-decoration: none;
     font-size: 16px;
     font-weight: bold;
     color: white;
 }
 
-.navbar ul {
+.navbar ul { /*styles the nav list*/
     display: flex;
 }
 
-.navbar ul li {
+.navbar ul li { /*styles the list items in the nav list*/
     margin-left: 30px;
 }
 
-ul {
+ul { /*global unordered list styling*/
     list-style-type: none;
 }
 
