--- a/styles/style.css
+++ b/styles/style.css
@@ -24,6 +24,10 @@ body { /* body styling */
     list-style-type: none;
 }
 
+.wideimage {
+    flex-basis: 0.25;
+}
+
 table {
     width: 100%;
     margin-left: 15px;
@@ -47,6 +51,7 @@ h1, h2 { /*global h1 and h2 styling*/
     background: #520010;
     color: white;
     height: 80px;
+    
 }
 
 .navbar .logo { /*styles the logo within the navbar*/
@@ -61,6 +66,8 @@ h1, h2 { /*global h1 and h2 styling*/
     justify-content: space-between;
     align-items: center;
     height: 100%;
+    width: 100%;
+    
 }
 
 .flex-section { /* styles the flex box containers */
@@ -85,13 +92,13 @@ h1, h2 { /*global h1 and h2 styling*/
 }
 
 a:hover {
-    color: black;
+    color:burlywood;
 }
 
 .header {
     background-color:#3e000c;
     color: white;
-    min-height: 300px;
+    min-height:100px;
     margin: 0;
     padding: 15px;
     width: 100%;
@@ -130,6 +137,12 @@ a:hover {
 .sectionpart p {
     padding: 0 15px;
       
+}
+
+.sectionpart a {
+    text-decoration: none;
+    font-size: 16px;
+    color: white;
 }
 
 .sectionpart:nth-of-type(odd) { /*thanks frogs. This alternates the image placement through each sectionpart*/
@@ -212,6 +225,11 @@ footer .fbc{
         justify-content: center;
     }
 
+    .sectionpart iframe {
+        display:block;
+        width: 100%;
+    }
+
     .fbc p,h1 {
         padding: 0px;
         margin: 0px;
@@ -248,6 +266,9 @@ footer .fbc{
         display: none;
     }
     
+    .sectionpart iframe {
+        display: none;
+    }
 
     
 }
