--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,8 @@
     box-sizing: border-box;
 }
 
-body { /* body styling */
+/* body styling */
+body { 
     font-family: 'Poppins', sans-serif;
     font-size: 16px;
     line-height: 1.5;
@@ -12,82 +13,7 @@ body { /* body styling */
     color: white;
 }
 
-.fbc { /* styles the flex box container */
-    max-width: 1100px;
-    padding: 0 35px;
-    margin-left: auto;
-    margin-right: auto;
-    
-}
-
-.navigation { /*global navigation styling*/
-    list-style-type: none;
-}
-
-table {
-    width: 100%;
-    margin-left: 15px;
-}
-
-td {
-    padding-bottom: 20px;
-}
-
-img { /*global image styling*/
-max-width:50%
-}
-
-
-
-h1, h2 { /*global h1 and h2 styling*/
-    margin-bottom: 16px ;
-}
-
-.navbar { /*styles the navbar*/
-    background: #520010;
-    color: white;
-    height: 80px;
-    
-}
-
-.navbar .logo { /*styles the logo within the navbar*/
-    font-weight: bold;
-    font-size: xx-large;
-    font-family: 'Fira Sans', sans-serif;
-    user-select: none;
-}
-
-.navbar .fbc { /*styles the flex box container within the nav bar*/
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    height: 100%;
-    width: 100%;
-    
-}
-
-.flex-section { /* styles the flex box containers */
-    max-width: 1100px;
-    margin: 0 auto;
-    
-}
-
-.navbar a { /*styles the links within the navbar*/
-    text-decoration: none;
-    font-size: 16px;
-    font-weight: bold;
-    color: white;
-}
-
-.navbar .navigation { /*styles the nav list*/
-    display: flex;
-}
-
-.navbar .navigation li { /*styles the list items within the nav list*/
-    margin-left: 25px;
-}
-
-
+/*header styling*/
 .header {
     background-color:#3e000c;
     color: white;
@@ -117,6 +43,88 @@ h1, h2 { /*global h1 and h2 styling*/
 .header p {
     margin-right: 15px;
 }
+
+.header p a {
+color: white;
+}
+
+img { /*global image styling*/
+    max-width:50%
+}
+    
+h1, h2 { /*global h1 and h2 styling*/
+        margin-bottom: 16px ;
+}
+
+/*table styling*/
+table {
+    width: 100%;
+    margin-left: 15px;
+}
+
+td {
+    padding-bottom: 20px;
+}
+
+/*navbar styling*/
+.navigation { /*global navigation styling*/
+    list-style-type: none;
+}
+
+.navbar { /*styles the navbar*/
+    background: #520010;
+    color: white;
+    height: 80px;
+    position: sticky;
+    /*position: -webkit-sticky;*/
+    top: 0;
+    
+}
+
+.navbar .logo { /*styles the logo within the navbar*/
+    font-weight: bold;
+    font-size: xx-large;
+    font-family: 'Fira Sans', sans-serif;
+    user-select: none;
+}
+
+.navbar .fbc { /*styles the flex box container within the nav bar*/
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 100%;
+    width: 100%;
+}
+
+.navbar a { /*styles the links within the navbar*/
+    text-decoration: none;
+    font-size: 16px;
+    font-weight: bold;
+    color: white;
+}
+
+.navbar .navigation { /*styles the nav list*/
+    display: flex;
+}
+
+.navbar .navigation li { /*styles the list items within the nav list*/
+    margin-left: 25px;
+}
+
+/*sectionpart (flexboxContainerType1) styling*/
+.fbc { 
+    max-width: 1100px;
+    padding: 0 35px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.flex-section { /* styles the flex box containers */
+    max-width: 1100px;
+    margin: 0 auto;
+}
+
+/*sectionpart (flexboxContainerType2) styling*/
 .sectionpart {
     display: flex;
     background: #3e000c;
@@ -129,7 +137,6 @@ h1, h2 { /*global h1 and h2 styling*/
 
 .sectionpart p {
     padding: 0 15px;
-      
 }
 
 .sectionpart a {
@@ -149,6 +156,7 @@ h1, h2 { /*global h1 and h2 styling*/
     padding-right: 30px;
 }
 
+/*footer styling*/
 footer {
     background-color:#3e000c;
     color: white;
@@ -163,6 +171,8 @@ footer .fbc{
     
 }
 
+/*media queries*/
+/*<768px styling*/
 @media (max-width: 768px) {
     .header .fbc {
         flex-direction: column;
@@ -244,7 +254,7 @@ footer .fbc{
     }
 
 
-
+/*<480px styling*/
 @media (max-width: 480px) { /*designed down to 320px, then recommend not using a potato to access website*/
     .navbar .logo {
         font-size: x-large;
