--- a/styles/style.css
+++ b/styles/style.css
@@ -49,7 +49,8 @@ color: white;
 }
 
 img { /*global image styling*/
-    max-width:50%
+    max-width:50%;
+    object-fit:contain;
 }
     
 h1, h2 { /*global h1 and h2 styling*/
@@ -142,6 +143,7 @@ td {
 /*sectionpart (flexboxContainerType2) styling*/
 .sectionpart {
     display: flex;
+    justify-content: space-between;
     background: #3e000c;
     color: white;
     border-radius: 10px;
@@ -151,7 +153,7 @@ td {
 }
 
 .sectionpart p {
-    padding: 0 15px;
+    padding: 20px
 }
 
 .sectionpart a {
@@ -160,6 +162,9 @@ td {
     color: white;
 }
 
+.sectionpart .column:nth-of-type(2){
+    margin-left: 40px;
+}
 .sectionpart:nth-of-type(odd) { /*thanks frogs. This alternates the image placement through each sectionpart*/
     flex-direction: row-reverse;
 }
@@ -196,7 +201,10 @@ footer .fbc{
     .section .sectionpart {
         flex-direction: column;
         text-align: center;
+
     }
+
+
 
     .navbar {
         height: 10em;
@@ -214,6 +222,7 @@ footer .fbc{
 
     img {
         align-self: center;
+        
     }
 
     td {
@@ -254,7 +263,7 @@ footer .fbc{
         padding: 0px;
         margin: 0px;
         justify-content: center;
-        display: flex;
+        
     }
     
     .header .fbc h1,p {
